--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -2,7 +2,7 @@
   flex-direction: column;
   align-items: center;
   background-color: #ebebeb;
-  height: 100%;
+  height: 100% !important;
   min-height: 100vh;
 }
 
