--- a/src/components/Table/Table.module.css
+++ b/src/components/Table/Table.module.css
@@ -12,3 +12,10 @@
 .header-column__addon {
   cursor: pointer;
 }
+
+.empty {
+  text-align: center;
+  font-weight: 600;
+  color: #8b8b8b;
+  margin: 2rem 0;
+}
