--- a/src/components/Table/Table.module.css
+++ b/src/components/Table/Table.module.css
@@ -13,9 +13,9 @@
   cursor: pointer;
 }
 
-.empty {
-  text-align: center;
-  font-weight: 600;
-  color: #8b8b8b;
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 2rem 0;
 }
